--- a/FMS/Views/Main/LiveForklfitsPage.xaml
+++ b/FMS/Views/Main/LiveForklfitsPage.xaml
@@ -47,7 +47,7 @@
                             <Grid>
                                 <TextBlock FontWeight="Bold">
                                     <Run Text="{Binding Name}" />
-                                    <Run Text="{Binding IpAdress}" />
+                                    <Run Text="{Binding IpAddress}" />
                                 </TextBlock>
                             </Grid>
                         </DataTemplate>
@@ -223,7 +223,7 @@
                             FontSize="18"
                             FontWeight="Bold"
                             Foreground="White"
-                            Text="SICK® LidarLoc" />
+                            Text="SICK® API" />
                     </Grid>
                 </ui:Button>
                 <Separator Height="5" Margin="0,0,0,0" />
